--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -37,7 +37,7 @@
 					content: '';
 					width: 410px;
 					height: 2px;
-					position: absolute;
+					position: relative;
 					top: 50%;
 					left: 23%;
 					background: $title-color;
