--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,8 +8,8 @@
                      <a href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
                  </li> 
                  {% endfor %}
-                 <li> <a href="https://github.com/brianmaierjr/long-haul" target="_blank">GitHub</a></li>
-                 <li><a href="https://github.com/brianmaierjr/long-haul/archive/master.zip">Download Theme</a></li>
+                 <li> <a href="https://github.com/dhanibaharzah" target="_blank">GitHub</a></li>
+                 <li> <a href="https://instagram.com/dhanibaharzah" target="_blank">Instagram</a></li>
              </ul>
          </nav>
      </div>
