--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                  </li> 
                  {% endfor %}
                  <li> <a href="https://github.com/dhanibaharzah" target="_blank">GitHub</a></li>
-                 <li> <a href="https://instagram.com/dhanibaharzah" target="_blank">Instagram</a></li>
+                 <li> <a href="https://instagram.com/dhanibaharzah" target="_blank">Documentation</a></li>
              </ul>
          </nav>
      </div>
